src/CSS/generated/src/CSS/CSSSimpleParser.cpp

// Generated from src/CSS/CSSSimple.g4 by ANTLR 4.13.2


#include "CSSSimpleVisitor.h"

#include "CSSSimpleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CSSSimpleParserStaticData final {
  CSSSimpleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CSSSimpleParserStaticData(const CSSSimpleParserStaticData&) = delete;
  CSSSimpleParserStaticData(CSSSimpleParserStaticData&&) = delete;
  CSSSimpleParserStaticData& operator=(const CSSSimpleParserStaticData&) = delete;
  CSSSimpleParserStaticData& operator=(CSSSimpleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag csssimpleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CSSSimpleParserStaticData> csssimpleParserStaticData = nullptr;

void csssimpleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (csssimpleParserStaticData != nullptr) {
    return;
  }
#else
  assert(csssimpleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CSSSimpleParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "statement", "ruleset", "selector", "simpleSelector", 
      "declaration", "property", "value", "valueList", "atRule", "any"
    },
    std::vector<std::string>{
      "", "','", "'{'", "'}'", "'*'", "'.'", "'['", "']'", "':'", "';'", 
      "')'", "'@'", "'('"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "Ident", "Hash", 
      "Number", "Percentage", "Dimension", "String_", "Color", "Function", 
      "Comment", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  csssimpleParserStaticData = std::move(staticData);
}

}

CSSSimpleParser::CSSSimpleParser(TokenStream *input) : CSSSimpleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CSSSimpleParser::CSSSimpleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CSSSimpleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *csssimpleParserStaticData->atn, csssimpleParserStaticData->decisionToDFA, csssimpleParserStaticData->sharedContextCache, options);
}

CSSSimpleParser::~CSSSimpleParser() {
  delete _interpreter;
}

const atn::ATN& CSSSimpleParser::getATN() const {
  return *csssimpleParserStaticData->atn;
}

std::string CSSSimpleParser::getGrammarFileName() const {
  return "CSSSimple.g4";
}

const std::vector<std::string>& CSSSimpleParser::getRuleNames() const {
  return csssimpleParserStaticData->ruleNames;
}

const dfa::Vocabulary& CSSSimpleParser::getVocabulary() const {
  return csssimpleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CSSSimpleParser::getSerializedATN() const {
  return csssimpleParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

CSSSimpleParser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSSimpleParser::StylesheetContext::EOF() {
  return getToken(CSSSimpleParser::EOF, 0);
}

std::vector<CSSSimpleParser::StatementContext *> CSSSimpleParser::StylesheetContext::statement() {
  return getRuleContexts<CSSSimpleParser::StatementContext>();
}

CSSSimpleParser::StatementContext* CSSSimpleParser::StylesheetContext::statement(size_t i) {
  return getRuleContext<CSSSimpleParser::StatementContext>(i);
}


size_t CSSSimpleParser::StylesheetContext::getRuleIndex() const {
  return CSSSimpleParser::RuleStylesheet;
}


std::any CSSSimpleParser::StylesheetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitStylesheet(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::StylesheetContext* CSSSimpleParser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, CSSSimpleParser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 26736) != 0)) {
      setState(22);
      statement();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    match(CSSSimpleParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CSSSimpleParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSSimpleParser::RulesetContext* CSSSimpleParser::StatementContext::ruleset() {
  return getRuleContext<CSSSimpleParser::RulesetContext>(0);
}

CSSSimpleParser::AtRuleContext* CSSSimpleParser::StatementContext::atRule() {
  return getRuleContext<CSSSimpleParser::AtRuleContext>(0);
}


size_t CSSSimpleParser::StatementContext::getRuleIndex() const {
  return CSSSimpleParser::RuleStatement;
}


std::any CSSSimpleParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::StatementContext* CSSSimpleParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CSSSimpleParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(32);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSSimpleParser::T__3:
      case CSSSimpleParser::T__4:
      case CSSSimpleParser::T__5:
      case CSSSimpleParser::Ident:
      case CSSSimpleParser::Hash: {
        enterOuterAlt(_localctx, 1);
        setState(30);
        ruleset();
        break;
      }

      case CSSSimpleParser::T__10: {
        enterOuterAlt(_localctx, 2);
        setState(31);
        atRule();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RulesetContext ------------------------------------------------------------------

CSSSimpleParser::RulesetContext::RulesetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSSimpleParser::SelectorContext *> CSSSimpleParser::RulesetContext::selector() {
  return getRuleContexts<CSSSimpleParser::SelectorContext>();
}

CSSSimpleParser::SelectorContext* CSSSimpleParser::RulesetContext::selector(size_t i) {
  return getRuleContext<CSSSimpleParser::SelectorContext>(i);
}

std::vector<CSSSimpleParser::DeclarationContext *> CSSSimpleParser::RulesetContext::declaration() {
  return getRuleContexts<CSSSimpleParser::DeclarationContext>();
}

CSSSimpleParser::DeclarationContext* CSSSimpleParser::RulesetContext::declaration(size_t i) {
  return getRuleContext<CSSSimpleParser::DeclarationContext>(i);
}


size_t CSSSimpleParser::RulesetContext::getRuleIndex() const {
  return CSSSimpleParser::RuleRuleset;
}


std::any CSSSimpleParser::RulesetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitRuleset(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::RulesetContext* CSSSimpleParser::ruleset() {
  RulesetContext *_localctx = _tracker.createInstance<RulesetContext>(_ctx, getState());
  enterRule(_localctx, 4, CSSSimpleParser::RuleRuleset);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    selector();
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSSimpleParser::T__0) {
      setState(35);
      match(CSSSimpleParser::T__0);
      setState(36);
      selector();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(CSSSimpleParser::T__1);
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSSimpleParser::Ident) {
      setState(43);
      declaration();
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    match(CSSSimpleParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorContext ------------------------------------------------------------------

CSSSimpleParser::SelectorContext::SelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSSimpleParser::SimpleSelectorContext *> CSSSimpleParser::SelectorContext::simpleSelector() {
  return getRuleContexts<CSSSimpleParser::SimpleSelectorContext>();
}

CSSSimpleParser::SimpleSelectorContext* CSSSimpleParser::SelectorContext::simpleSelector(size_t i) {
  return getRuleContext<CSSSimpleParser::SimpleSelectorContext>(i);
}


size_t CSSSimpleParser::SelectorContext::getRuleIndex() const {
  return CSSSimpleParser::RuleSelector;
}


std::any CSSSimpleParser::SelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitSelector(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::SelectorContext* CSSSimpleParser::selector() {
  SelectorContext *_localctx = _tracker.createInstance<SelectorContext>(_ctx, getState());
  enterRule(_localctx, 6, CSSSimpleParser::RuleSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(51);
      simpleSelector();
      setState(54); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 24688) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleSelectorContext ------------------------------------------------------------------

CSSSimpleParser::SimpleSelectorContext::SimpleSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSSimpleParser::SimpleSelectorContext::Ident() {
  return getToken(CSSSimpleParser::Ident, 0);
}

tree::TerminalNode* CSSSimpleParser::SimpleSelectorContext::Hash() {
  return getToken(CSSSimpleParser::Hash, 0);
}


size_t CSSSimpleParser::SimpleSelectorContext::getRuleIndex() const {
  return CSSSimpleParser::RuleSimpleSelector;
}


std::any CSSSimpleParser::SimpleSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitSimpleSelector(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::SimpleSelectorContext* CSSSimpleParser::simpleSelector() {
  SimpleSelectorContext *_localctx = _tracker.createInstance<SimpleSelectorContext>(_ctx, getState());
  enterRule(_localctx, 8, CSSSimpleParser::RuleSimpleSelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSSimpleParser::Ident: {
        setState(56);
        match(CSSSimpleParser::Ident);
        break;
      }

      case CSSSimpleParser::T__3: {
        setState(57);
        match(CSSSimpleParser::T__3);
        break;
      }

      case CSSSimpleParser::Hash: {
        setState(58);
        match(CSSSimpleParser::Hash);
        break;
      }

      case CSSSimpleParser::T__4: {
        setState(59);
        match(CSSSimpleParser::T__4);
        setState(60);
        match(CSSSimpleParser::Ident);
        break;
      }

      case CSSSimpleParser::T__5: {
        setState(61);
        match(CSSSimpleParser::T__5);
        setState(62);
        match(CSSSimpleParser::Ident);
        setState(63);
        match(CSSSimpleParser::T__6);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

CSSSimpleParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSSimpleParser::PropertyContext* CSSSimpleParser::DeclarationContext::property() {
  return getRuleContext<CSSSimpleParser::PropertyContext>(0);
}

CSSSimpleParser::ValueContext* CSSSimpleParser::DeclarationContext::value() {
  return getRuleContext<CSSSimpleParser::ValueContext>(0);
}


size_t CSSSimpleParser::DeclarationContext::getRuleIndex() const {
  return CSSSimpleParser::RuleDeclaration;
}


std::any CSSSimpleParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::DeclarationContext* CSSSimpleParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, CSSSimpleParser::RuleDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    property();
    setState(67);
    match(CSSSimpleParser::T__7);
    setState(68);
    value();
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CSSSimpleParser::T__8) {
      setState(69);
      match(CSSSimpleParser::T__8);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropertyContext ------------------------------------------------------------------

CSSSimpleParser::PropertyContext::PropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSSimpleParser::PropertyContext::Ident() {
  return getToken(CSSSimpleParser::Ident, 0);
}


size_t CSSSimpleParser::PropertyContext::getRuleIndex() const {
  return CSSSimpleParser::RuleProperty;
}


std::any CSSSimpleParser::PropertyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitProperty(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::PropertyContext* CSSSimpleParser::property() {
  PropertyContext *_localctx = _tracker.createInstance<PropertyContext>(_ctx, getState());
  enterRule(_localctx, 12, CSSSimpleParser::RuleProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(CSSSimpleParser::Ident);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ValueContext ------------------------------------------------------------------

CSSSimpleParser::ValueContext::ValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::Ident() {
  return getTokens(CSSSimpleParser::Ident);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::Ident(size_t i) {
  return getToken(CSSSimpleParser::Ident, i);
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::Number() {
  return getTokens(CSSSimpleParser::Number);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::Number(size_t i) {
  return getToken(CSSSimpleParser::Number, i);
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::String_() {
  return getTokens(CSSSimpleParser::String_);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::String_(size_t i) {
  return getToken(CSSSimpleParser::String_, i);
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::Color() {
  return getTokens(CSSSimpleParser::Color);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::Color(size_t i) {
  return getToken(CSSSimpleParser::Color, i);
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::Function() {
  return getTokens(CSSSimpleParser::Function);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::Function(size_t i) {
  return getToken(CSSSimpleParser::Function, i);
}

std::vector<CSSSimpleParser::ValueListContext *> CSSSimpleParser::ValueContext::valueList() {
  return getRuleContexts<CSSSimpleParser::ValueListContext>();
}

CSSSimpleParser::ValueListContext* CSSSimpleParser::ValueContext::valueList(size_t i) {
  return getRuleContext<CSSSimpleParser::ValueListContext>(i);
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::Percentage() {
  return getTokens(CSSSimpleParser::Percentage);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::Percentage(size_t i) {
  return getToken(CSSSimpleParser::Percentage, i);
}

std::vector<tree::TerminalNode *> CSSSimpleParser::ValueContext::Dimension() {
  return getTokens(CSSSimpleParser::Dimension);
}

tree::TerminalNode* CSSSimpleParser::ValueContext::Dimension(size_t i) {
  return getToken(CSSSimpleParser::Dimension, i);
}


size_t CSSSimpleParser::ValueContext::getRuleIndex() const {
  return CSSSimpleParser::RuleValue;
}


std::any CSSSimpleParser::ValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitValue(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::ValueContext* CSSSimpleParser::value() {
  ValueContext *_localctx = _tracker.createInstance<ValueContext>(_ctx, getState());
  enterRule(_localctx, 14, CSSSimpleParser::RuleValue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(84); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(84);
              _errHandler->sync(this);
              switch (_input->LA(1)) {
                case CSSSimpleParser::Ident: {
                  setState(74);
                  match(CSSSimpleParser::Ident);
                  break;
                }

                case CSSSimpleParser::Number: {
                  setState(75);
                  match(CSSSimpleParser::Number);
                  break;
                }

                case CSSSimpleParser::String_: {
                  setState(76);
                  match(CSSSimpleParser::String_);
                  break;
                }

                case CSSSimpleParser::Color: {
                  setState(77);
                  match(CSSSimpleParser::Color);
                  break;
                }

                case CSSSimpleParser::Function: {
                  setState(78);
                  match(CSSSimpleParser::Function);
                  setState(79);
                  valueList();
                  setState(80);
                  match(CSSSimpleParser::T__9);
                  break;
                }

                case CSSSimpleParser::Percentage: {
                  setState(82);
                  match(CSSSimpleParser::Percentage);
                  break;
                }

                case CSSSimpleParser::Dimension: {
                  setState(83);
                  match(CSSSimpleParser::Dimension);
                  break;
                }

              default:
                throw NoViableAltException(this);
              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(86); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ValueListContext ------------------------------------------------------------------

CSSSimpleParser::ValueListContext::ValueListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSSimpleParser::ValueContext *> CSSSimpleParser::ValueListContext::value() {
  return getRuleContexts<CSSSimpleParser::ValueContext>();
}

CSSSimpleParser::ValueContext* CSSSimpleParser::ValueListContext::value(size_t i) {
  return getRuleContext<CSSSimpleParser::ValueContext>(i);
}


size_t CSSSimpleParser::ValueListContext::getRuleIndex() const {
  return CSSSimpleParser::RuleValueList;
}


std::any CSSSimpleParser::ValueListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitValueList(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::ValueListContext* CSSSimpleParser::valueList() {
  ValueListContext *_localctx = _tracker.createInstance<ValueListContext>(_ctx, getState());
  enterRule(_localctx, 16, CSSSimpleParser::RuleValueList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    value();
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSSimpleParser::T__0) {
      setState(89);
      match(CSSSimpleParser::T__0);
      setState(90);
      value();
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtRuleContext ------------------------------------------------------------------

CSSSimpleParser::AtRuleContext::AtRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSSimpleParser::AtRuleContext::Ident() {
  return getToken(CSSSimpleParser::Ident, 0);
}

std::vector<CSSSimpleParser::AnyContext *> CSSSimpleParser::AtRuleContext::any() {
  return getRuleContexts<CSSSimpleParser::AnyContext>();
}

CSSSimpleParser::AnyContext* CSSSimpleParser::AtRuleContext::any(size_t i) {
  return getRuleContext<CSSSimpleParser::AnyContext>(i);
}

std::vector<CSSSimpleParser::StatementContext *> CSSSimpleParser::AtRuleContext::statement() {
  return getRuleContexts<CSSSimpleParser::StatementContext>();
}

CSSSimpleParser::StatementContext* CSSSimpleParser::AtRuleContext::statement(size_t i) {
  return getRuleContext<CSSSimpleParser::StatementContext>(i);
}


size_t CSSSimpleParser::AtRuleContext::getRuleIndex() const {
  return CSSSimpleParser::RuleAtRule;
}


std::any CSSSimpleParser::AtRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitAtRule(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::AtRuleContext* CSSSimpleParser::atRule() {
  AtRuleContext *_localctx = _tracker.createInstance<AtRuleContext>(_ctx, getState());
  enterRule(_localctx, 18, CSSSimpleParser::RuleAtRule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(CSSSimpleParser::T__10);
    setState(97);
    match(CSSSimpleParser::Ident);
    setState(101);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(98);
        any(); 
      }
      setState(103);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSSimpleParser::T__8: {
        setState(104);
        match(CSSSimpleParser::T__8);
        break;
      }

      case CSSSimpleParser::T__1: {
        setState(105);
        match(CSSSimpleParser::T__1);
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 26736) != 0)) {
          setState(106);
          statement();
          setState(111);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(112);
        match(CSSSimpleParser::T__2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnyContext ------------------------------------------------------------------

CSSSimpleParser::AnyContext::AnyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSSimpleParser::AnyContext::Ident() {
  return getToken(CSSSimpleParser::Ident, 0);
}

tree::TerminalNode* CSSSimpleParser::AnyContext::Number() {
  return getToken(CSSSimpleParser::Number, 0);
}

tree::TerminalNode* CSSSimpleParser::AnyContext::String_() {
  return getToken(CSSSimpleParser::String_, 0);
}

tree::TerminalNode* CSSSimpleParser::AnyContext::Color() {
  return getToken(CSSSimpleParser::Color, 0);
}


size_t CSSSimpleParser::AnyContext::getRuleIndex() const {
  return CSSSimpleParser::RuleAny;
}


std::any CSSSimpleParser::AnyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSSimpleVisitor*>(visitor))
    return parserVisitor->visitAny(this);
  else
    return visitor->visitChildren(this);
}

CSSSimpleParser::AnyContext* CSSSimpleParser::any() {
  AnyContext *_localctx = _tracker.createInstance<AnyContext>(_ctx, getState());
  enterRule(_localctx, 20, CSSSimpleParser::RuleAny);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 833474) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void CSSSimpleParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  csssimpleParserInitialize();
#else
  ::antlr4::internal::call_once(csssimpleParserOnceFlag, csssimpleParserInitialize);
#endif
}
